--- a/style.css
+++ b/style.css
@@ -1,145 +1,17 @@
-* {
-	box-sizing: border-box;
-	margin: 0;
-	padding: 0;
-	overflow: hidden;
+.squares{
+	height:200px; 
+	width:200px;	
 }
-html,
-body {
-	scroll-behavior: smooth;
-	font-family: "Zen Kurenaido", sans-serif;
-	width: 100vw;
-	height: 100vh;
-	overflow: hidden;
+.rect{
+	height:200px; 
+	width:400px;	
 }
-body {
-	background: rgb(51, 114, 147);
-	background: radial-gradient(
-		circle,
-		rgba(51, 114, 147, 1) 0%,
-		rgba(1, 51, 88, 1) 100%
-	);
-	background-image: url("https://raw.githubusercontent.com/ZaneWesley/image-dropbox/main/christmas/bg.jpg");
-	background-position: center top;
-	background-size: cover;
-	background-repeat: no-repeat;
+
+h2{
+	margin-top: 5px;
+	margin-bottom: 5px;
 }
-canvas {
-	position: fixed;
-	top: 0;
-	left: 0;
-	/*background-image: url("https://raw.githubusercontent.com/ZaneWesley/image-dropbox/main/christmas/bg.jpg");
-	background-position: center top;
-	background-size: cover;
-	background-repeat: no-repeat;*/
-}
-#world {
-	position: fixed;
-	bottom: 0;
-	left: 0;
-	right: 0;
-	background-image: url("https://raw.githubusercontent.com/ZaneWesley/image-dropbox/main/christmas/world.png");
-	background-position: center bottom;
-	background-size: 90%;
-	background-repeat: no-repeat;
-	width: 100%;
-	max-width: 449px;
-	height: 30%;
-	margin: 0 auto;
-}
-.header {
-	font-family: "Dancing Script", cursive;
-	position: fixed;
-	top: 0;
-	padding: 1em;
-	left: 50%;
-	transform: translateX(-50%);
-	z-index: 1;
-	color: #7ee3b6;
-	text-align: center;
-}
-.header h1 {
-	font-size: 3em;
-}
-.header div {
-	font-size: 2.6em;
-}
-#countdown-box {
-	z-index: 1;
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	display: flex;
-	justify-content: space-around;
-	align-content: center;
-	width: 100%;
-}
-.cdi {
-	display: inline-block;
-	font-size: 5em;
-	text-align: center;
-	color: #fff;
-}
-.cdi-lbl {
-	font-size: 0.5em;
-}
-#m-break {
-	display: none;
-}
-#controls {
-	position: fixed;
-	bottom: 0;
-	right: 0;
-	padding: 1em;
-	z-index: 2;
-	display: flex;
-}
-#controls span {
-	color: #ffffff;
-	cursor: pointer;
-}
-#music-list {
-	position: absolute;
-	bottom: 3em;
-	right: 1em;
-	width: 200px;
-	height: auto;
-	z-index: 2;
-	background-color: #698ba0;
-	color: #042845;
-	text-align: center;
-	display: none;
-}
-#music-list.open {
-	display: block;
-}
-#music-list li {
-	padding: 0.5em;
-	cursor: pointer;
-	text-transform: capitalize;
-}
-/*#music-list li:hover {
-        background-color: #3c7493;
-        color: #fff;
-      }*/
-#music-list ul li.active {
-	background-color: #145074;
-	color: #fff;
-}
-@media (max-width: 775px) {
-	#countdown-box {
-		flex-wrap: wrap;
-	}
-	.cdi {
-		font-size: 3em;
-	}
-	.cdi-lbl {
-		color: #fff;
-	}
-	#m-break {
-		display: block;
-		flex-basis: 100%;
-		height: 0;
-	}
+
+[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+  display: none !important;
 }
